# asyncFastApi-Base

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: build.yml  pytest.yml
backend/: .env.example  Dockerfile
backend/app/: main.py  pyproject.toml  utils.py
backend/app/api/v1/: auth.py  health.py  user.py
backend/app/cache/: base.py  cache.py  memory_db.py  redis_db.py
backend/app/core/: config.py  exceptions.py  session_manager.py
backend/app/migrations/: env.py
backend/app/models/: base.py
backend/app/repositories/: base.py
backend/app/schemas/: auth.py  base.py  page.py  user.py
backend/app/services/: auth.py  base.py  celery.py  mailer.py  user.py
backend/app/services/helpers/: security.py
backend/app/tests/: __init__.py  conftest.py
backend/app/tests/api/: test_auth.py  test_user.py
backend/app/tests/test_api/: auth_test.py  test_auth.py  test_user.py  user_test.py
docs/: template.md
docs/backend/: authentication.md
nginx/conf.d/: app.conf
